# Ecosync-

./: README.md  bun.lockb  package.json
backend/db/: db.sql
backend/rest-api-server/: Cargo.toml
backend/rest-api-server/src/: main.rs
backend/rest-api-server/src/modules/: queries.rs  types.rs
frontend/dashboard/: bun.lockb  package.json  tailwind.config.js
frontend/dashboard/src/: App.svelte
frontend/dashboard/src/lib/: Bar.svelte  Chart.svelte  Navbar.svelte
site-serv/: api.cpp  api.h  site-serv.ino
site-serv/data/: index.html
site-serv/data/assets/: index-a427a658.css  index-bc8316fe.js
src/: App.svelte
src/lib/: Section.svelte  Toggle.svelte
