[package]
name = "rest-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["openssl"] }
lazy_static = "1.4.0"
mysql = "24.0.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
